박정수 : 사각형, 원 오브젝트 구현, 맵에 배열로 사각형, 원 나열

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="CCore.h" />
     <ClInclude Include="CEllipse.h" />
+    <ClInclude Include="CEntity.h" />
     <ClInclude Include="CKeyMgr.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="CObject.h" />
@@ -160,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="CCore.cpp" />
     <ClCompile Include="CEllipse.cpp" />
+    <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CKeyMgr.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CPlayer.cpp" />
