--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -139,18 +139,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CBlueRect.h" />
+    <ClInclude Include="CComponent.h" />
     <ClInclude Include="CCore.h" />
-    <ClInclude Include="CEllipse.h" />
     <ClInclude Include="CEntity.h" />
+    <ClInclude Include="CGreenRect.h" />
     <ClInclude Include="CKeyMgr.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="CPurpleRect.h" />
     <ClInclude Include="CRectangle.h" />
+    <ClInclude Include="CRedRect.h" />
     <ClInclude Include="CScene.h" />
     <ClInclude Include="CSceneMgr.h" />
     <ClInclude Include="CScene_START.h" />
     <ClInclude Include="CTimeMgr.h" />
+    <ClInclude Include="CYellowRect.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
@@ -159,18 +164,24 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CBlueRect.cpp" />
+    <ClCompile Include="CComponent.cpp" />
     <ClCompile Include="CCore.cpp" />
-    <ClCompile Include="CEllipse.cpp" />
     <ClCompile Include="CEntity.cpp" />
+    <ClCompile Include="CGreenRect.cpp" />
     <ClCompile Include="CKeyMgr.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CPlayer.cpp" />
+    <ClCompile Include="CPurpleRect.cpp" />
     <ClCompile Include="CRectangle.cpp" />
+    <ClCompile Include="CRedRect.cpp" />
     <ClCompile Include="CScene.cpp" />
     <ClCompile Include="CSceneMgr.cpp" />
     <ClCompile Include="CScene_START.cpp" />
     <ClCompile Include="CTimeMgr.cpp" />
+    <ClCompile Include="CYellowRect.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="struct.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc" />
