--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CBlueRect.h" />
-    <ClInclude Include="CComponent.h" />
+    <ClInclude Include="CCollider.h" />
     <ClInclude Include="CCore.h" />
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CGreenRect.h" />
@@ -151,8 +151,10 @@
     <ClInclude Include="CPurpleRect.h" />
     <ClInclude Include="CRectangle.h" />
     <ClInclude Include="CRedRect.h" />
+    <ClInclude Include="CRes.h" />
     <ClInclude Include="CScene.h" />
     <ClInclude Include="CSceneMgr.h" />
+    <ClInclude Include="CScene_PLAY.h" />
     <ClInclude Include="CScene_START.h" />
     <ClInclude Include="CTimeMgr.h" />
     <ClInclude Include="CYellowRect.h" />
@@ -165,7 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CBlueRect.cpp" />
-    <ClCompile Include="CComponent.cpp" />
+    <ClCompile Include="CCollider.cpp" />
     <ClCompile Include="CCore.cpp" />
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CGreenRect.cpp" />
@@ -175,8 +177,10 @@
     <ClCompile Include="CPurpleRect.cpp" />
     <ClCompile Include="CRectangle.cpp" />
     <ClCompile Include="CRedRect.cpp" />
+    <ClCompile Include="CRes.cpp" />
     <ClCompile Include="CScene.cpp" />
     <ClCompile Include="CSceneMgr.cpp" />
+    <ClCompile Include="CScene_PLAY.cpp" />
     <ClCompile Include="CScene_START.cpp" />
     <ClCompile Include="CTimeMgr.cpp" />
     <ClCompile Include="CYellowRect.cpp" />
