--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -59,6 +59,9 @@
     <Filter Include="Engine\06. Resource\Texture">
       <UniqueIdentifier>{7c592451-fc6f-4e4d-9334-e1d583bea76c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\06. Resource\Sound">
+      <UniqueIdentifier>{74fd8bb5-b24b-469e-847b-f6b5a67afbe4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CCore.h">
@@ -136,6 +139,12 @@
     <ClInclude Include="CRes.h">
       <Filter>Engine\06. Resource</Filter>
     </ClInclude>
+    <ClInclude Include="CTexture.h">
+      <Filter>Engine\06. Resource\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="CSound.h">
+      <Filter>Engine\06. Resource\Sound</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc">
@@ -210,6 +219,12 @@
     </ClCompile>
     <ClCompile Include="CRes.cpp">
       <Filter>Engine\06. Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="CTexture.cpp">
+      <Filter>Engine\06. Resource\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="CSound.cpp">
+      <Filter>Engine\06. Resource\Sound</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
